# Remote_GPIO_RaspberryPI4

./: CMakeLists.txt  LICENSE  README.md  main.cpp  remote_pigpio_install.sh
